:sparkles: style: fix tags alignment for postcards

--- a/styles/Components/PostCard.module.scss
+++ b/styles/Components/PostCard.module.scss
@@ -24,6 +24,7 @@
   overflow: scroll;
   max-height: 50px;
   & > span{
+    margin-right:6px;
     align-content: center;
     max-width: fit-content;
     min-width: fit-content;
